@@ -44,13 +44,13 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
         'org.gradle.performance.db.url': "jdbc:h2:${tmpDir.testDirectory}"
     )
 
-    final buildContext = new IntegrationTestBuildContext();
+    final buildContext = IntegrationTestBuildContext.INSTANCE
     final experimentRunner = Mock(BuildExperimentRunner)
     final reporter = Mock(ReporterAndStore)
     final testProjectLocator = Stub(TestProjectLocator)
     final currentGradle = Stub(GradleDistribution)
     final releases = Stub(ReleasedVersionDistributions)
-    final currentVersionBase = GradleVersion.current().baseVersion.version
+    final currentBaseVersion = GradleVersion.current().baseVersion.version
 
     def setup() {
         releases.all >> [
@@ -73,7 +73,8 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
         runner.previousTestIds = ['prev 1']
         runner.testProject = 'test1'
         runner.targetVersions = ['1.0', '1.1']
-        runner.tasksToRun = ['clean', 'build']
+        runner.tasksToRun = ['build']
+        runner.cleanTasks = ['clean']
         runner.args = ['--arg1', '--arg2']
         runner.gradleOpts = ['-Xmx24']
         runner.useDaemon = true
@@ -87,16 +88,18 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
         results.testId == 'some-test'
         results.previousTestIds == ['prev 1']
         results.testProject == 'test1'
-        results.tasks == ['clean', 'build']
+        results.tasks == ['build']
+        results.cleanTasks == ['clean']
         results.args == ['--arg1', '--arg2']
-        runner.gradleOpts.findAll { !it.startsWith('-XX:MaxPermSize=') } == ['-Xmx24']
+        runner.gradleOpts.find { it == '-Xmx24' }
+        runner.gradleOpts.sort(false) == (runner.gradleOpts as Set).sort(false)
         results.daemon
         results.versionUnderTest
         results.jvm
         results.operatingSystem
+        results.host
         results.current.size() == 4
         results.current.totalTime.average == Duration.seconds(10)
-        results.current.totalMemoryUsed.average == DataAmount.kbytes(10)
         results.baselineVersions*.version == ['1.0', '1.1', MOST_RECENT_RELEASE]
         results.baseline('1.0').results.size() == 4
         results.baseline('1.1').results.size() == 4
@@ -104,10 +107,10 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
 
         and:
         4 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
         1 * reporter.report(_)
         0 * reporter._
@@ -126,7 +129,7 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
 
         and:
         3 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
     }
 
@@ -142,7 +145,7 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
         !results.baselineVersions
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
             assert result.name == 'Current Gradle'
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
         1 * reporter.report(_)
         1 * experimentRunner.getHonestProfiler()
@@ -162,7 +165,7 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
         !results.baselineVersions
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
             assert result.name == 'Current Gradle'
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
         1 * reporter.report(_)
         1 * experimentRunner.getHonestProfiler()
@@ -176,7 +179,7 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
 
         when:
         System.setProperty('org.gradle.performance.baselines', 'defaults')
-        def results = runner.run()
+        runner.run()
 
         then:
         thrown(IllegalArgumentException)
@@ -198,14 +201,14 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
 
         and:
         2 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
     }
 
     def "ignores baseline version if it has the same base as the version under test"() {
         given:
         def runner = runner()
-        runner.targetVersions = ['1.0', currentVersionBase, MOST_RECENT_RELEASE, 'last']
+        runner.targetVersions = ['1.0', currentBaseVersion, MOST_RECENT_RELEASE, 'last']
 
         when:
         def results = runner.run()
@@ -215,7 +218,7 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
 
         and:
         3 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
     }
 
@@ -232,7 +235,7 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
 
         and:
         3 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
     }
 
@@ -245,7 +248,7 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
         when:
         System.setProperty('org.gradle.performance.baselines', override.join(','))
         experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
         def results = runner.run()
 
@@ -268,7 +271,7 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
 
         when:
         experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
         def results = runner.run()
 
@@ -283,36 +286,16 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
 
         when:
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(5), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(5)))
         }
         def results = runner.run()
         results.assertCurrentVersionHasNotRegressed()
 
         then: "without overrides, test fails"
         thrown(AssertionError)
-    }
-
-    def "a performance regression is identified in speed but we only check for memory"() {
-        given:
-        def runner = runner()
-        runner.targetVersions = ['last']
-
-        when:
-        System.setProperty('org.gradle.performance.execution.checks', 'memory')
-        1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
-        }
-        1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(5), totalMemoryUsed: DataAmount.kbytes(10)))
-        }
-        def results = runner.run()
-        results.assertCurrentVersionHasNotRegressed()
-
-        then: "test passes"
-        noExceptionThrown()
     }
 
     def "a performance regression is identified in speed but we check for nothing"() {
@@ -323,10 +306,10 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
         when:
         System.setProperty('org.gradle.performance.execution.checks', 'none')
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(5), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(5)))
         }
         def results = runner.run()
         results.assertCurrentVersionHasNotRegressed()
@@ -343,7 +326,7 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
         when:
         System.setProperty('org.gradle.performance.execution.checks', 'speed')
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
             result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(5)))
@@ -363,7 +346,7 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
         when:
         System.setProperty('org.gradle.performance.execution.checks', 'none')
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
             result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(5)))
@@ -375,38 +358,17 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
         noExceptionThrown()
     }
 
-    def "a performance regression is identified in memory and we explicitly check for all"() {
+    def "fails when build under test fails"() {
         given:
         def runner = runner()
         runner.targetVersions = ['last']
 
         when:
-        System.setProperty('org.gradle.performance.execution.checks', 'all')
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
+            result.add(operation(failure: new RuntimeException()))
         }
         1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(5)))
-        }
-        def results = runner.run()
-        results.assertCurrentVersionHasNotRegressed()
-
-        then: "test fails"
-        thrown(AssertionError)
-    }
-
-    def "a performance regression is identified in speed and memory and we explicitly check for all"() {
-        given:
-        def runner = runner()
-        runner.targetVersions = ['last']
-
-        when:
-        System.setProperty('org.gradle.performance.execution.checks', 'all')
-        1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(10), totalMemoryUsed: DataAmount.kbytes(10)))
-        }
-        1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
-            result.add(operation(totalTime: Duration.seconds(5), totalMemoryUsed: DataAmount.kbytes(5)))
+            result.add(operation(totalTime: Duration.seconds(10)))
         }
         def results = runner.run()
         results.assertCurrentVersionHasNotRegressed()
@@ -415,8 +377,48 @@ class CrossVersionPerformanceTestRunnerTest extends ResultSpecification {
         thrown(AssertionError)
     }
 
+    def "fails when baseline fails"() {
+        given:
+        def runner = runner()
+        runner.targetVersions = ['last']
+
+        when:
+        1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
+            result.add(operation(totalTime: Duration.seconds(10)))
+        }
+        1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
+            result.add(operation(failure: new RuntimeException()))
+        }
+        def results = runner.run()
+        results.assertCurrentVersionHasNotRegressed()
+
+        then:
+        thrown(AssertionError)
+    }
+
+    //current behavior, not necessarily desired
+    def "does not fail if build under test has exceptions and checks=none"() {
+        given:
+        def runner = runner()
+        runner.targetVersions = ['last']
+
+        when:
+        System.setProperty('org.gradle.performance.execution.checks', 'none')
+        1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
+            result.add(operation(failure: new RuntimeException()))
+        }
+        1 * experimentRunner.run(_, _) >> { BuildExperimentSpec spec, MeasuredOperationList result ->
+            result.add(operation(failure: new RuntimeException()))
+        }
+        def results = runner.run()
+        results.assertCurrentVersionHasNotRegressed()
+
+        then:
+        noExceptionThrown()
+    }
+
     def runner() {
-        def runner = new CrossVersionPerformanceTestRunner(experimentRunner, reporter, releases)
+        def runner = new CrossVersionPerformanceTestRunner(experimentRunner, reporter, releases, new IntegrationTestBuildContext())
         runner.testId = 'some-test'
         runner.testProject = 'some-project'
         runner.workingDir = tmpDir.testDirectory
